# Author: Peter Dragos
# Repository: https://github.com/dragospe/python-flake-template
[tool.poetry]
name = "app"
version = "0.1.0"
description = "placeholder description"
authors = ["Peter Dragos"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"
pytest = "^7.1.3"
flake8 = "^5.0.4"
pylint = "^2.15.2"
mypy = "=0.961"


[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
app = 'app:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
